# disba

./: .bandit  .codacy.yml  .coveragerc  .doctr-files  .gitignore  .prospector.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  genindex.html  github_deploy_key_keurfonluu_disba.enc  index.html  index.md  objects.inv  requirements-dev.txt  search.html  searchindex.js  setup.cfg  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md  perf.py  sample.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/disba/: _dispersion.html  _eigen.html  _ellipticity.html  _helpers.html  _sensitivity.html
_modules/disba/_cps/: _srfker96.html  _surf96.html  _swegn96.html
_sources/api/: cps.rst.txt  dispersion.rst.txt  misc.rst.txt  sensitivity.rst.txt
api/: cps.html  dispersion.html  eigen.html  ellipticity.html  index.html  misc.html  sensitivity.html
disba/: __about__.py  __init__.py  _base.py  _common.py  _dispersion.py  _eigen.py  _ellipticity.py  _exception.py  _helpers.py  _sensitivity.py  _srfdis.py  _srfker96.py  _surf96.py  _swegn96.py  _thomson_haskell.py
disba/_cps/: __init__.py  _common.py  _srfker96.py  _surf96.py  _swegn96.py
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/api/: dispersion.rst  eigen.rst  ellipticity.rst  index.rst  misc.rst
test/: helpers.py  test_dispersion.py  test_eigen.py  test_ellipticity.py  test_exception.py  test_misc.py  test_sensitivity.py
