[metadata]
name = disba
version = 0.0.1
author = Keurfon Luu
email = keurfonluu@outlook.com
description = Numba-accelerated computation of surface wave dispersion curves
url = https://github.com/keurfonluu/disba
project_urls =
    Code=https://github.com/keurfonluu/disba
    Issues=https://github.com/keurfonluu/disba/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    numba
python_requires = >=3.6
setup_requires =
    setuptools >= 42
    wheel