[metadata]
name = disba
version = 0.7.0
author = Keurfon Luu
email = keurfonluu@outlook.com
description = Numba-accelerated computation of surface wave dispersion
url = https://github.com/keurfonluu/disba
project_urls =
    Code=https://github.com/keurfonluu/disba
    Issues=https://github.com/keurfonluu/disba/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    importlib_metadata
    numpy
    numba
python_requires = >= 3.6
setup_requires =
    setuptools >= 42
    wheel
